# prysm

./: WORKSPACE  go.mod  go.sum
beacon-chain/core/helpers/: BUILD.bazel
blox/: BUILD.bazel  flags.go  main.go  runner.go
blox/client/: BUILD.bazel  grpc.go  runner.go  slotticker.go  validator.go
my_keys/1/: transaction-data
remote/: BUILD.bazel
remote_blox/: BUILD.bazel  runner.go
slasher/detection/: detect.go
validator/: BUILD.bazel  README.md  main.go
validator/accounts/: BUILD.bazel
validator/client/: BUILD.bazel  mock_validator.go  runner.go  service.go  service_test.go  ssv.go  ssv_runner.go  validator.go  validator_runner.go  validator_runner_test.go
validator/db/: BUILD.bazel
validator/flags/: BUILD.bazel  flags.go
validator/internal/: BUILD.bazel
validator/keymanager/: BUILD.bazel  remote.go  wallet.go  wallet_test.go
validator/node/: BUILD.bazel  node.go
validator/remote/: BUILD.bazel  runner.go
validator/tester_ssv_node/: beacon.go  main.go  ssv.go
