load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/bloxapp/prysm/blox",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//blox/client:go_default_library",
    ],
)

go_binary(
    name = "blox",
    embed = [":go_default_library"],
    pure = "off",  # Enabled unless there is a valid reason to include cgo dep.
    visibility = [
        "//visibility:public",
    ],
)