load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "runner.go",
    ],
    importpath = "github.com/bloxapp/prysm/blox/client",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//shared/cmd:go_default_library",
        "//shared/featureconfig:go_default_library",
        "//shared/debug:go_default_library",
        "//validator/node:go_default_library",
        "//validator/flags:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_urfave_cli_v2//:go_default_library",
    ],
)