load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "runner.go",
        "validator.go",
        "grpc.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/blox/client",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//shared/cmd:go_default_library",
        "//shared/featureconfig:go_default_library",
        "//shared/debug:go_default_library",
        "//shared/bytesutil:go_default_library",
        "//shared/params:go_default_library",
        "//shared/slotutil:go_default_library",
        "//validator/node:go_default_library",
        "//validator/flags:go_default_library",
        "//validator/client:go_default_library",
        "//validator/keymanager:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_urfave_cli_v2//:go_default_library",
        "@com_github_wealdtech_eth2_signer_api//pb/v1:go_default_library",
        "@io_opencensus_go//plugin/ocgrpc:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//metadata:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go_default_library",
        "@com_github_grpc_ecosystem_go_grpc_middleware//retry:go_default_library",
        "@com_github_prysmaticlabs_ethereumapis//eth/v1alpha1:go_default_library",
        "@com_github_gogo_protobuf//types:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
    ],
)